# graphix-stim-compiler

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pytest.yml  ruff.yml  typecheck.yml
graphix_stim_compiler/: __init__.py  graphix_stim_compiler.py
tests/: conftest.py  test_stim_compiler.py
